--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
-    <h1 id="title">Press a key to start</h1>
-    <h2 id="subtitle"></h2>
+    <h1 id="title">Tic tac toe</h1>
+    <div>
+    <h2 id="subtitle">Choose your symbol</h2>
+    <div class="btns-div">
+    <button class="x-button">x</button>
+    <button class="o-button">o</button>
+</div>
+</div>
     <div id="grid-container">
 
     </div>
