--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Roboto&display=swap" rel="stylesheet">
+    
+
+<script src="https://kit.fontawesome.com/d8655b52b5.js" crossorigin="anonymous"></script>
+
+
     <link rel="stylesheet" href="styles.css">
     <title>Tic tac toe</title>
 </head>
 
 <body>
-    <h1 id="title">Tic tac toe</h1>
+    <h1 id="title">TIC TAC TOE</h1>
     <div>
     <h2 id="subtitle">Choose your symbol</h2>
     <div class="btns-div">
@@ -21,6 +30,11 @@
     <div id="grid-container">
 
     </div>
+    <button class='restart'>RESTART</button>
+    <footer id="footer">
+        <p class="footer-text">Made by Filip Neubauer</p>
+        <a href="https://github.com/FilipNeubauer" class="git-hub" target="_blank"><i class="fa-brands fa-github"></i></a>
+    </footer>
 
 
 
